<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FPV Camera and Maps</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="start_record">Start Record</string>
    <string name="capture">Capture</string>
    <string name="status_no_product_connected">Status: No Product Connected</string>
    <string name="open">Open</string>
    <string name="djifpvdemo">DJIFPVDemo</string>
    <string name="map">Map</string>
</resources>