<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status_no_product_connected"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/text_product_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp" />
    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:text="@string/product_information"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btn_open"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/round_btn"
        android:text="@string/open"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:text="@string/sdk_version"
        android:textSize="15sp"
        android:id="@+id/textView2" />

    <TextView
        ontal="true"
        andro
        android:id="@+id/textView"

        ayout_width="wrap_content"
        a
        @color/colorBlack"
        android:t
        20sp"
        android:textStyle="bold"
        _marginTop="58dp"
        andro
        rue"
        "@string/djifpvdemo"
        yout_height="wrap_content"
        android:layout_alignPar
        xtAppearanceSmall"
        android:te
        textAppearance="?androi
        @string/djifpvd"
        />
</RelativeLayout>